--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -26,11 +26,11 @@
   width: 100%;
   height: 100%;
   background-image: 
-      linear-gradient(transparent, rgba(76, 73, 73, 0.477)),
-      linear-gradient(to right, rgba(209, 195, 195, 0.459) 1px, transparent 1px),
-      linear-gradient(to top, rgba(251, 244, 244, 0.573) 1px, transparent 1px);
+      linear-gradient(transparent, rgba(82, 191, 255, 0.477)),
+      linear-gradient(to right, rgba(38, 255, 0, 0.459) 1px, transparent 1px),
+      linear-gradient(to top, rgba(255, 0, 0, 0.573) 1px, transparent 1px);
   background-size: 100% 100%, 100px 100px, 100px 100px;
-  transform: perspective(500px) rotateX(60deg);
+  transform: perspective(300px) rotateX(80deg);
   animation: moveLines 3s linear infinite;
 }
 
@@ -61,7 +61,7 @@
   font-weight: bold;
   margin-bottom: 1rem;
   letter-spacing: 3px;
-  animation: flicker 1.5s infinite;
+  animation: flicker 4.5s infinite;
 }
 
 
@@ -706,3 +706,26 @@
 }
 
 
+@media screen and (max-height:377px) {
+  .dhruv {
+    height: 150px;
+    margin-left: 10px;
+    margin-right: auto;
+    display: block;
+  }
+
+  .grid-container {
+    height: 30vh;
+    margin-top: -100px;
+  }
+
+  .grid-container .text h1 {
+    font-size: 1.0rem;
+    margin-left :1rem; 
+    margin-top : 2rem;
+  }
+
+  #home{
+    height: 200px;
+  }
+}
