--- a/src/Styles/Stats.css
+++ b/src/Styles/Stats.css
@@ -6,7 +6,7 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background: linear-gradient(to right, #b27f1f, #fefe68, #f3a80a);
+    background: linear-gradient(to right, #b27f1f, #11110c, #1a1814);
 }
 
 
